# MaxScale

Documentation/: Changelog.md
Documentation/Filters/: Cache.md
Documentation/Getting-Started/: MariaDB-MaxScale-Installation-Guide.md
Documentation/Release-Notes/: MaxScale-2.1.0-Release-Notes.md
include/maxscale/: dcb.h  poll.h  protocol.h  service.h
server/core/: CMakeLists.txt  config.c  dcb.c  gateway.cc  poll.c  service.c  session.c
server/core/test/: testpoll.c
server/include/: server.h
server/modules/filter/: CMakeLists.txt
server/modules/filter/beholder/: CMakeLists.txt  beholder.cc  datapoint.cc  datapoint.hh  file_relay.cc  file_relay.hh  redis_relay.cc  redis_relay.hh  relay.cc  relay.hh
server/modules/include/: blr.h  schemarouter.h
server/modules/monitor/: CMakeLists.txt
server/modules/monitor/mysqlmon/: CMakeLists.txt  mysql_mon.c
server/modules/protocol/CDC/: cdc.c
server/modules/protocol/HTTPD/: httpd.c
server/modules/protocol/MySQL/MySQLBackend/: mysql_backend.c
server/modules/protocol/MySQL/MySQLClient/: mysql_client.c
server/modules/protocol/maxscaled/: maxscaled.c
server/modules/protocol/telnetd/: telnetd.c
server/modules/protocol/testprotocol/: testprotocol.c
server/modules/routing/avrorouter/: avro.c
server/modules/routing/binlog/: blr.c  blr_master.c  blr_slave.c
server/modules/routing/binlogrouter/: blr.c  blr_master.c  blr_slave.c
server/modules/routing/debugcli/: debugcmd.c
server/modules/routing/readwritesplit/: readwritesplit.c  rwsplit_internal.h  rwsplit_route_stmt.c  rwsplit_select_backends.c
server/modules/routing/schemarouter/: schemarouter.c  sharding_common.c
